--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   font-size: calc(12px + 2vmin);
   color: white;
-  text-align: center;
+  /* text-align: center; */
   font-family: 'Patua One', cursive;
 }
 
